--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <HTML>
 <head>
 <title>NEWDESIGN</title>
-<link rel="stylesheet" type="text/css" href="https://www.googledrive.com/host/0B3YmMs1KPM-kMlFEeUFBZFFUalU/school/css/newreview.css">
+<link rel="stylesheet" type="text/css" href="https://saleem711.github.io/SetDesignLayout.github.io/newreview.css">
 
 <script type="text/javascript" src="date_time.js"></script>
 
@@ -222,9 +222,9 @@ window.onload = date_time('date_time');</script></span>
 
 var slideArray = new Array()
 
-slideArray[0]= "<a href=https://www.googledrive.com/host/0B3YmMs1KPM-kMlFEeUFBZFFUalU/CRICKET%20SCORE.html>Visit My First Webpage Which Is Cricscor</a>";
+slideArray[0]= "<a href=https://saleem711.github.io/homepage.github.io/>Visit My First Webpage Which Is Cricscor</a>";
 
-slideArray[1]= "<a href=https://www.googledrive.com/host/0B3YmMs1KPM-kMlFEeUFBZFFUalU/CRICKET%20SCORE2.html>My Second Webpage Derived From First One Is Basic Version </a>";
+slideArray[1]= "<a href=https://saleem711.github.io/homepage.github.io/CRICKET%20SCORE2.html>My Second Webpage Derived From First One Is Basic Version </a>";
 
 function firstSlide()
 
